--- a/BrowserStack.API.Screenshots/BrowserStack.API.Screenshots.csproj
+++ b/BrowserStack.API.Screenshots/BrowserStack.API.Screenshots.csproj
@@ -11,7 +11,7 @@
     <AssemblyName>BrowserStack.API.Screenshots</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-	<RestorePackages>true</RestorePackages>
+    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -60,10 +60,12 @@
     <Compile Include="BatchCaptureJobInfo.cs" />
     <Compile Include="BatchScreenshotsCapture.cs" />
     <Compile Include="Browser.cs" />
+    <Compile Include="BrowserStackTunnel.cs" />
     <Compile Include="Configuration\AuthenticationElement.cs" />
     <Compile Include="Configuration\BatchElement.cs" />
     <Compile Include="Configuration\BrowserStackAPIScreenshotsSection.cs" />
     <Compile Include="Configuration\ConfigurationSectionManager.cs" />
+    <Compile Include="Configuration\TunnelsCollection.cs" />
     <Compile Include="Job.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Screenshot.cs" />
