Added interfaces to the main classes and prepared appropriate constructors to enable unit testing

--- a/BrowserStack.API.Screenshots/BrowserStack.API.Screenshots.csproj
+++ b/BrowserStack.API.Screenshots/BrowserStack.API.Screenshots.csproj
@@ -66,6 +66,8 @@
     <Compile Include="Configuration\BrowserStackAPIScreenshotsSection.cs" />
     <Compile Include="Configuration\ConfigurationSectionManager.cs" />
     <Compile Include="Configuration\TunnelsCollection.cs" />
+    <Compile Include="IBatchScreenshotsCapture.cs" />
+    <Compile Include="IScreenshotsApi.cs" />
     <Compile Include="Job.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Screenshot.cs" />
